--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1110,7 +1110,7 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-rPodXapsm5 {
-  background-image: url("../../../assets/images/mbr.jpg");
+  background-image: url("../../../assets/images/camera-2349617.jpg");
 }
 .cid-rPodXapsm5 H1 {
   text-align: center;
